# scraper

./: .gitignore  README.md  makecsv.ipynb  pyproject.toml  school_ids.txt  testing.ipynb
24-25_archive/: CSU_Bakersfield.py  CSU_East_Bay.py  CSU_Fullerton.py  Cal_Maritime.py  Cal_Poly_Pomona.py  Cal_Poly_San_Luis_Obispo.py  Chico_State.py  Fresno_State.py  San_Jose_State.py  Stanislaus_State.py  UC_Berkeley.py  UC_Davis.py  UC_Irvine.py  UC_Merced.py  UC_Santa_Barbara.py  UC_Santa_Cruz.py  University_of_Illinois_Urbana-Champaign.py
src/config/: CSU_Bakersfield.py  CSU_Chico.py  CSU_Dominguez_Hills.py  CSU_East_Bay.py  CSU_Fullerton.py  CSU_Long_Beach.py  CSU_Monterey_Bay.py  CSU_San_Bernadino.py  CSU_San_Bernardino.py  CSU_San_Marcos.py  Cal_Maritime.py  Cal_Poly_Humboldt.py  Cal_Poly_Pomona.py  Cal_Poly_San_Luis_Obispo.py  Chico_State.py  Fresno_State.py  San_Diego_State.py  San_Jose_State.py  Sonoma_State.py  Stanislaus_State.py  UCLA.py  UCSD.py  UC_Berkeley.py  UC_Davis.py  UC_Irvine.py  UC_Merced.py  UC_San_Diego.py  UC_San_Francisco.py  UC_San_francisco.py  UC_Santa_Barbara.py  UC_Santa_Barbra.py  UC_Santa_Cruz.py  University_of_Illinois_Urbana-Champaign.py  __init__.py
src/scraper/: cli.py  common.py  config.py  courseleaf.py  modern_campus.py  moderncampus.py  squares.py  ucla.py  ucsc.py
