[project]
name = "scraper"
version = "0.1.0"
description = "Course Descriptions Scraper(s)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bs4>=0.0.2",
    "requests>=2.32.3",
    "rich>=13.8.0",
    "ruff>=0.6.2",
    "typer>=0.12.5",
    "lxml>=5.3.0",
    "pandas>=2.2.3",
    "pip>=25.0.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 89
select = ["B","C","E","F","T","W","B9","I"]

[tool.ruff.isort]
known-first-party = ["scraper"]

[tool.uv]
dev-dependencies = [
    "ipython>=8.26.0",
]
